apps/homelab/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
spec:
  ingressClassName: traefik
  rules:
  - host: adguard.homelab.fritz.box
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-http
            port:
              number: 3000
  - host: adguard.homelab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-http
            port:
              number: 3000
